@@ -4,8 +4,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.when;
 
 import java.util.ArrayList;
-import java.util.List;
-import nl.paulzijlmans.transactions.model.Category;
+import java.util.Collections;
 import nl.paulzijlmans.transactions.model.Transaction;
 import nl.paulzijlmans.transactions.repository.TransactionRepository;
 import org.junit.jupiter.api.Test;
@@ -24,19 +23,12 @@ class TransactionServiceTest {
   TransactionService service;
 
   @Test
-  void findAll() {
-    var groceries = new Category();
-    groceries.setName("Groceries");
-    var transactions = new ArrayList<>(List.of(
-        new Transaction(0L, "Grocery store", 99.95, "Amsterdam", groceries),
-        new Transaction(1L, "Bakery", 19.90, "The Bakery", groceries)
-    ));
+  void getTransactions() {
+    var transactions = new ArrayList<>(Collections.singletonList(new Transaction()));
     when(transactionRepository.findAll()).thenReturn(transactions);
 
-    var result = service.findAll();
+    var result = service.getTransactions();
 
-    assertEquals(2, result.size());
-    assertEquals("Grocery store", result.get(0).getDescription());
-    assertEquals("Bakery", result.get(1).getDescription());
+    assertEquals(1, result.size());
   }
 }
